added mongo root password

--- a/deployments/mongodb-deploy.yaml
+++ b/deployments/mongodb-deploy.yaml
@@ -36,3 +36,8 @@ spec:
             secretKeyRef:
               name: mongodb-access
               key: database
+        - name: MONGODB_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-access
+              key: database
