--- a/deployments/mongodb-deploy.yaml
+++ b/deployments/mongodb-deploy.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
       - name: mongodb
         image: bitnami/mongodb:latest
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "128Mi"
+          limits:
+            cpu: "1000m"
+            memory: "256Mi"
         ports:
         - containerPort: 27017
           name: mongodb
