--- a/deployments/movies-marketplace-deploy.yaml
+++ b/deployments/movies-marketplace-deploy.yaml
@@ -15,5 +15,12 @@ spec:
       containers:
       - name: movies-marketplace
         image: monarene/movies-marketplace:develop
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "128Mi"
+          limits:
+            cpu: "1000m"
+            memory: "256Mi"
         ports:
         - containerPort: 80
