--- a/deployments/movies-parser-deploy.yaml
+++ b/deployments/movies-parser-deploy.yaml
@@ -15,6 +15,13 @@ spec:
       containers:
       - name: movies-parser
         image: monarene/movies-parser:develop
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "128Mi"
+          limits:
+            cpu: "1000m"
+            memory: "256Mi"
         env:
         - name: AWS_REGION
           value: us-east-2
