--- a/deployments/movies-store-deploy.yaml
+++ b/deployments/movies-store-deploy.yaml
@@ -15,6 +15,13 @@ spec:
       containers:
       - name: movies-store
         image: monarene/movie-store:develop
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "128Mi"
+          limits:
+            cpu: "1000m"
+            memory: "256Mi"
         ports:
         - containerPort: 3000
         # env:
