--- a/deployments/movies-parser-deploy.yaml
+++ b/deployments/movies-parser-deploy.yaml
@@ -32,8 +32,5 @@ spec:
             secretKeyRef:
               name: mongodb-access
               key: database
-        # - name: MONGO_URI
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: mongodb-access
-        #       key: uri
+        - name: MONGO_URI
+          value: mongodb.watchlist.svc.cluster.local
