--- a/deployments/movies-store-deploy.yaml
+++ b/deployments/movies-store-deploy.yaml
@@ -24,9 +24,6 @@ spec:
             memory: "256Mi"
         ports:
         - containerPort: 3000
-        # env:
-        # - name: MONGO_URI
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: mongodb-access
-        #       key: uri
+        env:
+        - name: MONGO_URI
+          value: mongodb.watchlist.svc.cluster.local
