--- a/deployments/movies-parser-deploy.yaml
+++ b/deployments/movies-parser-deploy.yaml
@@ -33,4 +33,4 @@ spec:
               name: mongodb-access
               key: database
         - name: MONGO_URI
-          value: mongodb://root:root@mongodb/watchlist?retryWrites=true&w=majority&poolSize=1
+          value: mongodb://root:PASSWORD@mongodb/watchlist?retryWrites=true&w=majority&poolSize=1
